Implement Applicative on Maybe.