@@ -21,15 +21,15 @@ class MaybeTest {
     final int G = 106399;
     Function<List<Integer>, Maybe<Double>> dagpengeCalculator = ints -> {
         if (ints.isEmpty()) return Maybe.nothing();
-        if (ints.get(0) == 0) return Maybe.nothing();
+        if (ints.getFirst() == 0) return Maybe.nothing();
 
         double sum = ints.stream().mapToDouble(Integer::doubleValue).sum();
-        if (!(ints.get(0) > (1.5*G) || sum > (3*G))) return Maybe.nothing();
+        if (!(ints.getFirst() > (1.5*G) || sum > (3*G))) return Maybe.nothing();
 
         double avg = sum / ints.size();
-        double base = Math.min( 6*G, Math.max(avg, ints.get(0)) );
+        double base = Math.min( 6*G, Math.max(avg, ints.getFirst()) );
 
-        return Maybe.maybe(Math.ceil( base / 260D ));
+        return Maybe.just(Math.ceil( base / 260D ));
     };
 
     @Test
@@ -47,7 +47,6 @@ class MaybeTest {
     @Test
     void maybe_returns_nothing_of_type_double() {
         Maybe<Double> dagpenger = dagpengeCalculator.apply(List.of(0, 500_000, 600_000));
-        assertTrue(dagpenger instanceof Nothing);
         assertTrue(dagpenger instanceof Nothing<Double>);
         assertTrue(dagpenger.isNothing());
         assertEquals(0D, dagpenger.orElse(0D));
@@ -56,7 +55,6 @@ class MaybeTest {
     @Test
     void maybe_returns_just_of_type_double() {
         Maybe<Double> dagpenger = dagpengeCalculator.apply(List.of(500_000, 450_000, 400_000));
-        assertTrue(dagpenger instanceof Just);
         assertTrue(dagpenger instanceof Just<Double>);
         assertEquals(1924D, dagpenger.value());
         assertEquals(1924D, dagpenger.orElse(0D));
